[tool.poetry]
name = "Hangman"
version = "0.1.0"
description = ""
authors = ["Mohamed Khaled <mohammed20191701163@cis.asu.edu.eg>"]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
